--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,9 @@ description: >- # this mejekans to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://gakutosasabe.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
-domain: gakutosasabe.github.io
 # Build settings
 theme: minima
 plugins:
